[gd_scene load_steps=16 format=3 uid="uid://67tv83pdid3b"]

[ext_resource type="PackedScene" uid="uid://dv1g6cku7jiyi" path="res://apps/pet/interface/pet_preview.tscn" id="1_iuq00"]
[ext_resource type="Script" path="res://apps/create_a_pet/interface/create_a_pet.gd" id="1_xwkmm"]
[ext_resource type="Script" path="res://interface/components/modal/modal.gd" id="2_an2mu"]
[ext_resource type="PackedScene" uid="uid://wclbxg4k0jxl" path="res://apps/create_a_pet/interface/form_identity.tscn" id="2_bpdi2"]
[ext_resource type="PackedScene" uid="uid://b2lvl5vdl2cw2" path="res://apps/create_a_pet/interface/form_animal.tscn" id="3_uuri1"]
[ext_resource type="PackedScene" uid="uid://8cmeaqc6ym14" path="res://apps/create_a_pet/interface/form_personality_attributes.tscn" id="4_00qkj"]
[ext_resource type="Texture2D" uid="uid://b2lpdvuywdedv" path="res://apps/painter/assets/icons/check.svg" id="5_pnvnf"]
[ext_resource type="PackedScene" uid="uid://cwympjetwsnql" path="res://apps/create_a_pet/interface/form_traits.tscn" id="5_x60a4"]
[ext_resource type="PackedScene" uid="uid://b5cr6ut2c532" path="res://apps/create_a_pet/interface/form_favorites.tscn" id="6_1iulq"]
[ext_resource type="Texture2D" uid="uid://bn61fbcpokvek" path="res://apps/painter/assets/icons/back.svg" id="10_10f8d"]

[sub_resource type="Shader" id="Shader_lbw10"]
code = "shader_type canvas_item;

float easeInOutSine (float x) {
	return -(cos(PI * x) - 1.0) / 2.0;
}

float easeInOutCubic (float x) {
	return x < 0.5 ? 4.0 * x * x * x : 1.0 - pow(-2.0 * x + 2.0, 3.0) / 2.0;
}

mat2 rotate2d(float angle) {
    return mat2(vec2(cos(angle),-sin(angle)),
                vec2(sin(angle),cos(angle)));
}

float variation(vec2 v1, vec2 v2, float strength, float speed) {
	return sin(
        dot(normalize(v1), normalize(v2)) * strength + TIME * speed
    ) / 100.0;
}

vec3 paintCircle (vec2 uv, vec2 center, float rad, float width) {
    
    vec2 diff = center - uv;
    float len = easeInOutCubic(length(diff));

    len += variation(diff, vec2(0.0, 1.0), 6.0, 0.1);
    len -= variation(diff, vec2(1.0, 0.0), 6.0, 0.1);
    
    float circle = smoothstep(rad - width, rad, len) - smoothstep(rad, rad + width, len);
    return vec3(circle);
}

void fragment () {
	vec2 uv = SCREEN_UV;
    uv.x *= 1.5;
    uv.x -= 0.25;
    
    vec3 color;
    float radius = 0.45;
    vec2 center = vec2(0.5);
     
    //paint color circle
    color = paintCircle(uv, center, radius, 0.45);
    
    //color with gradient
    vec2 v = rotate2d(TIME / 2.0) * uv;
    color *= vec3(v.x, v.y, 0.7 - v.y * v.x);
    
    //paint white circle
    color += paintCircle(uv, center, radius, 0.01);
    
    
	COLOR = vec4(color, 0.1);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q7i01"]
shader = SubResource("Shader_lbw10")

[sub_resource type="Shader" id="Shader_15ofx"]
code = "shader_type canvas_item;
render_mode blend_mix;

const highp float NOISE_GRANULARITY = 4.0 / 255.0;

highp float random (highp vec2 coords) {
   return fract(sin(dot(coords.xy, vec2(12.9898,78.233))) * 43758.5453);
}
 
void fragment () {
  highp vec2 coordinates = SCREEN_UV;

  vec4 fragmentColor = texture(SCREEN_TEXTURE, SCREEN_UV, 4.0);
  fragmentColor += mix(-NOISE_GRANULARITY, NOISE_GRANULARITY, random(coordinates + vec2(cos(TIME))));
  COLOR = fragmentColor;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dy53u"]
shader = SubResource("Shader_15ofx")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05yob"]

[node name="CreateAPet" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1488, 0.1488, 0.16, 0)
script = ExtResource("1_xwkmm")

[node name="ModalController" type="Control" parent="." node_paths=PackedStringArray("target")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_an2mu")
target = NodePath("..")
enter_from = 3
exit_to = 3
use_backdrop_blur = false

[node name="Backdrop" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PatternRect" type="ColorRect" parent="Backdrop"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_q7i01")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="Backdrop"]
copy_mode = 2
rect = Rect2(0, 0, 0, 0)

[node name="BlurRect" type="ColorRect" parent="Backdrop"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_dy53u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Grid" type="GridContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="Grid"]
offset_left = 15.0
offset_right = 812.0
offset_bottom = 953.0
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Grid/MarginContainer2"]
offset_left = 24.0
offset_top = 24.0
offset_right = 773.0
offset_bottom = 929.0
theme_override_constants/separation = 64

[node name="FormIdentity" parent="Grid/MarginContainer2/VBoxContainer" instance=ExtResource("2_bpdi2")]
unique_name_in_owner = true
offset_left = 0.0
offset_top = 0.0
offset_right = 749.0
offset_bottom = 328.0

[node name="FormAnimal" parent="Grid/MarginContainer2/VBoxContainer" instance=ExtResource("3_uuri1")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 392.0
offset_right = 749.0
offset_bottom = 905.0
grow_horizontal = 1
grow_vertical = 1

[node name="Control" type="Control" parent="Grid"]
layout_mode = 3
anchors_preset = 0
offset_top = 957.0
offset_right = 828.0
offset_bottom = 957.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="Grid/Control"]
custom_minimum_size = Vector2(400, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="PetPreview" parent="Grid/Control/SubViewportContainer" instance=ExtResource("1_iuq00")]
size = Vector2i(828, 400)

[node name="MarginContainer" type="MarginContainer" parent="Grid/Control"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -48.0
offset_right = 24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 120

[node name="AdoptButton" type="Button" parent="Grid/Control/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 0)
offset_left = 24.0
offset_top = 24.0
offset_right = 214.0
offset_bottom = 111.0
text = "Adopt"
icon = ExtResource("5_pnvnf")
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="Grid"]
offset_left = 47.0
offset_top = 961.0
offset_right = 781.0
offset_bottom = 2060.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Grid/MarginContainer"]
offset_left = 24.0
offset_top = 24.0
offset_right = 710.0
offset_bottom = 1075.0

[node name="FormPersonalityAttributes" parent="Grid/MarginContainer/VBoxContainer" instance=ExtResource("4_00qkj")]
unique_name_in_owner = true
offset_left = 0.0
offset_top = 0.0
offset_right = 686.0
offset_bottom = 442.0

[node name="HSeparator" type="HSeparator" parent="Grid/MarginContainer/VBoxContainer"]
offset_top = 454.0
offset_right = 686.0
offset_bottom = 518.0
theme_override_styles/separator = SubResource("StyleBoxEmpty_05yob")

[node name="FormTraits" parent="Grid/MarginContainer/VBoxContainer" instance=ExtResource("5_x60a4")]
unique_name_in_owner = true
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 530.0
offset_right = 686.0
offset_bottom = 622.0
grow_horizontal = 1
grow_vertical = 1

[node name="HSeparator2" type="HSeparator" parent="Grid/MarginContainer/VBoxContainer"]
offset_top = 634.0
offset_right = 686.0
offset_bottom = 698.0
theme_override_styles/separator = SubResource("StyleBoxEmpty_05yob")

[node name="FormFavorites" parent="Grid/MarginContainer/VBoxContainer" instance=ExtResource("6_1iulq")]
unique_name_in_owner = true
offset_left = 0.0
offset_top = 710.0
offset_right = 686.0
offset_bottom = 1051.0
grow_horizontal = 1
grow_vertical = 1

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
offset_right = 72.0
offset_bottom = 48.0
theme_type_variation = &"SubtleButton"
icon = ExtResource("10_10f8d")
expand_icon = true
